# huginn

./: .gitignore  .lintstagedrc.json  .prettierignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  app.identity.json  crash-boundaries.json  eslint.config.mjs  eslint.config.project.mjs  index.html  knip.project.json  overlay.html  package-lock.json  package.json  release-blockers.json  ui-boundary.json  vite.config.ts
.claude/memory/: MEMORY.md  README.md  huginn-glossary.md  open-work-backlog.md  project-scope.md  repo-is-memory-home.md  response-prelude.md  user-conventions.md  version-bump-trigger.md
.claude/rules/: INDEX.md  agent-delegation.md  automation.md  clarify-and-plan.md  code-quality.md  context-loading.md  core-principles.md  dependencies.md  documentation.md  editing-workflow.md  git-workflow.md  knowledge-handover.md  logging.md  no-guessing.md  privacy.md  response-format.md  reusability.md  rule-maintenance.md  security.md  stack-tauri.md  testing.md  verification.md  versioning.md
.claude/rules/project/: README.md  design-system.md  jobs.md  model-assets.md  overlay-and-input.md  speech-and-privacy.md
.github/workflows/: ci.yml
docs/: spike-1a-windows.md
docs/adr/: 002-best-solution-principle.md  003-repo-single-source-of-truth.md  004-verify-first-no-guessing.md  005-reusability-policy.md  006-context-budget-selective-loading.md  007-generated-indexes-staleness-gate.md  008-quality-pipeline.md  009-dependency-policy.md  010-testing-strategy.md  011-security-by-design.md  022-agent-delegation-governance.md  024-versioning-and-build-channels.md  030-portable-governance-core.md  032-config-layering-project-overlays.md  033-governance-layers-cascade.md  README.md  app-023-cross-platform-release-signing.md  core-008-quality-pipeline.md  core-024-versioning-and-build-channels.md  core-032-config-layering-project-overlays.md  core-033-governance-layers-cascade.md  core-034-layered-adr-identifiers.md  core-035-cross-layer-supersession.md  manifest.json
docs/adr/current/: README.md
docs/adr/project/: README.md  proj-001-ui-stack-tauri-over-rust-toolkits.md  proj-002-provisional-identity-and-release-blockers.md  proj-003-visual-identity.md  proj-004-overlay-and-input.md  proj-005-speech-pipeline-process-isolation.md  proj-006-model-assets-and-the-only-network-call.md  proj-007-storage-layout-and-logging-boundaries.md  proj-008-jobs-and-the-process-monitor.md  proj-009-crate-structure.md  proj-010-voice-rules-and-macros.md  proj-011-streaming-transcription.md  proj-012-gpu-acceleration.md  proj-013-batch-only-transcription.md
docs/migrations/: 001-config-layering.md  002-versioning-per-change.md  003-governance-layers.md  README.md
docs/product/: name-and-identity.md
e2e/: README.md  tsconfig.json  wdio.conf.ts
e2e/specs/: appearance.e2e.ts  background.e2e.ts  commands.e2e.ts  settings.e2e.ts  speech.e2e.ts  views.e2e.ts
governance/: config.json  manifest.json
scripts/: check-index.mjs  context-for.mjs  governance-init.mjs  governance-manifest.mjs  governance-update.mjs  lint-memory.mjs  sync-index.mjs
scripts/lib/: governance-core.mjs  governance-core.test.mjs  governance.mjs  governance.test.mjs
scripts/project/: build-icons.mjs  check-release-ready.mjs  check-release-ready.test.mjs  dictation-target.ps1  make-speech-fixture.ps1  measure-idle.mjs  measure-idle.test.mjs  prepare-bundled-model.mjs  prepare-worker.mjs  prove-dictation.ps1  prove-focus-neutrality.ps1  setup-build-tools.mjs
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/crates/huginn-asr/: Cargo.toml
src-tauri/crates/huginn-asr-proto/: Cargo.toml
src-tauri/crates/huginn-asr-proto/src/: lib.rs
src-tauri/crates/huginn-asr-worker/: Cargo.toml
src-tauri/crates/huginn-asr-worker/src/: main.rs
src-tauri/crates/huginn-asr-worker/tests/: pipeline.rs
src-tauri/crates/huginn-asr/src/: lib.rs  whisper.rs
src-tauri/crates/huginn-audio/: Cargo.toml
src-tauri/crates/huginn-audio/src/: cue.rs  lib.rs  resample.rs
src-tauri/crates/huginn-core/: Cargo.toml
src-tauri/crates/huginn-core/src/: jobs.rs  lib.rs
src-tauri/crates/huginn-models/: Cargo.toml
src-tauri/crates/huginn-models/src/: bundled.rs  catalogue.rs  download.rs  import.rs  lib.rs  store.rs
src-tauri/crates/huginn-text/: Cargo.toml
src-tauri/crates/huginn-text/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/resources/models/: README.md
src-tauri/src/: dto.rs  lib.rs  logging.rs  main.rs  settings.rs  state.rs  tray.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/pushtotalk/: fallback.rs  mod.rs
src-tauri/src/pushtotalk/win32/: focus.rs  inject.rs  mod.rs  probe.rs  session.rs
src-tauri/src/speech/: mod.rs  worker.rs
src-tauri/src/spike/: hotkey.rs  mod.rs
src-tauri/src/spike/win32/: clipboard.rs  inject.rs  mod.rs  overlay.rs
src-tauri/tests/: contracts.rs
src/api/: commands.test.ts  commands.ts
src/bindings/: AudioDevice.ts  BuiltinCommandDto.ts  CrashReport.ts  DirEntryDto.ts  DirListingDto.ts  HotkeyStatus.ts  Job.ts  JobKind.ts  JobState.ts  ModelStatus.ts  Progress.ts  SettingsDto.ts  ThemeChoice.ts  VoiceActionDto.ts  VoiceRuleDto.ts
src/components/: AboutDialog.test.tsx  AboutDialog.tsx  CrashBoundary.test.tsx  CrashNotice.tsx  FatalScreen.tsx  FilePicker.test.tsx  FilePicker.tsx
src/components/layout/: JobMonitor.tsx  StatusBar.tsx  TitleBar.test.tsx  TitleBar.tsx
src/components/sidebar/: Sidebar.tsx
src/components/ui/: Button.test.tsx  Button.tsx  FileDropZone.test.tsx  FileDropZone.tsx  HotkeyField.tsx  (+14 more)
src/hooks/: useAutostart.ts  useDirectory.ts  useHotkey.test.tsx  useHotkey.ts  useJobs.test.tsx  useJobs.ts  useLanguage.ts  useSettings.test.tsx  useSettings.ts  useSpeech.ts  useTheme.ts  useUiScale.test.tsx
src/i18n/: i18n.test.ts  index.ts
src/lib/: app.ts
src/overlay/: main.test.ts  main.ts
src/store/: ui.ts
src/styles/: globals.css  palette.ts
src/test/: setup.ts
src/views/: HelpView.tsx  HomeView.tsx  LogsView.test.tsx  LogsView.tsx  SettingsView.test.tsx  SettingsView.tsx
(+4 files in other folders)
