[package]
name = "huginn"
version = "0.2.0"
description = "Huginn is a fully local, system-wide voice input for Windows and macOS. It turns speech into text on the device and inserts it into the active application — no cloud, no telemetry, no stored recordings."
authors = ["kaoszwerg"]
edition = "2021"
publish = false
# The app binary carries the product name so the dev dock/process shows it (ADR-024).
default-run = "huginn"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin on Windows (rust-lang/cargo#8519).
name = "huginn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "huginn"
path = "src/main.rs"

# Versions pinned to the stable releases used by the shell and verified against crates.io (ADR-009).
# Cargo.lock is committed for reproducible builds.

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-window-state = "2.4.1"
# >= 2.3.2 is mandatory: earlier versions burn a full CPU core for as long as the key is held
# (global-hotkey#176) — and push-to-talk holds it (ADR-PROJ-004, rule:overlay-and-input).
tauri-plugin-global-shortcut = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
ts-rs = "12.0.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync"] }

# On non-Windows targets the `open` crate handles URL launching via the system default handler.
# On Windows we drive ShellExecuteW directly (see commands::open_external) — `cmd /c start` from a
# windows-subsystem binary exits silently before the browser appears.
[target.'cfg(not(target_os = "windows"))'.dependencies]
open = "5.3.5"

[target.'cfg(target_os = "windows")'.dependencies]
# Win32_UI_Input_KeyboardAndMouse: SendInput (text injection).
# Win32_System_Threading + Win32_System_LibraryLoader: identify the focus target's process, and
# install the diagnostic keyboard hook (ADR-PROJ-004).
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
tempfile = "3.27.0"
