# The workspace roots HERE, at src-tauri/, and not at the repo root (ADR-PROJ-009). That is a
# constraint, not a preference: `scripts/sync-version.mjs` is pinned upstream and writes the product
# version into THIS Cargo.toml and THIS Cargo.lock, and `cargo audit` reads the lockfile from the same
# place. A workspace at the repo root would mean editing a pinned script — which the drift gate blocks,
# and which opting out of would cost every future fix to the version SSOT.
[workspace]
members = [
    "crates/huginn-core",
    "crates/huginn-audio",
    "crates/huginn-asr",
    "crates/huginn-asr-proto",
    "crates/huginn-asr-worker",
    "crates/huginn-models",
    "crates/huginn-text",
]

# Internal crates carry a fixed, meaningless version (0.0.0) and are path dependencies. The product
# version exists ONLY in [package] below, where the pinned sync script writes it: two version sources
# would make `version:check` right to fail.
#
# The version is written next to the path, not left off: a bare `{ path }` resolves to a `*`
# requirement, which `deny.toml` bans as a wildcard (rule:dependencies: exact versions, no drift) —
# and rightly, since a wildcard on a real dependency is a supply-chain hole. `= "0.0.0"` is both
# exact and honest here; these crates move together.
[workspace.dependencies]
huginn-core = { path = "crates/huginn-core", version = "0.0.0" }
huginn-audio = { path = "crates/huginn-audio", version = "0.0.0" }
huginn-asr = { path = "crates/huginn-asr", version = "0.0.0" }
huginn-asr-proto = { path = "crates/huginn-asr-proto", version = "0.0.0" }
huginn-models = { path = "crates/huginn-models", version = "0.0.0" }
huginn-text = { path = "crates/huginn-text", version = "0.0.0" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
ts-rs = "12.0.1"
chrono = { version = "0.4.44", features = ["serde"] }

[package]
name = "huginn"
version = "0.16.0"
description = "Huginn is a fully local, system-wide voice input for Windows and macOS. It turns speech into text on the device and inserts it into the active application — no cloud, no telemetry, no stored recordings."
authors = ["kaoszwerg"]
edition = "2021"
publish = false
# The app binary carries the product name so the dev dock/process shows it (ADR-024).
default-run = "huginn"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin on Windows (rust-lang/cargo#8519).
name = "huginn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "huginn"
path = "src/main.rs"

# Versions pinned to the stable releases used by the shell and verified against crates.io (ADR-009).
# Cargo.lock is committed for reproducible builds.

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
huginn-core = { workspace = true }
huginn-audio = { workspace = true }
huginn-models = { workspace = true }
huginn-asr-proto = { workspace = true }
huginn-text = { workspace = true }
tauri = { version = "2.11.2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-window-state = "2.4.1"
# >= 2.3.2 is mandatory: earlier versions burn a full CPU core for as long as the key is held
# (global-hotkey#176) — and push-to-talk holds it (ADR-PROJ-004, rule:overlay-and-input).
tauri-plugin-global-shortcut = "2.3.2"
# Start with the desktop. A dictation tool the user has to launch first is a tool they forget to
# launch (ADR-PROJ-004). Off by default: nothing installs itself into a user's startup unasked.
tauri-plugin-autostart = "2.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
ts-rs = "12.0.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync"] }

# On non-Windows targets the `open` crate handles URL launching via the system default handler.
# On Windows we drive ShellExecuteW directly (see commands::open_external) — `cmd /c start` from a
# windows-subsystem binary exits silently before the browser appears.
[target.'cfg(not(target_os = "windows"))'.dependencies]
open = "5.3.5"

[target.'cfg(target_os = "windows")'.dependencies]
# The taskbar theme decides which tray tint is legible; Windows does not recolour tray icons itself.
windows-registry = "0.6.1"
# Win32_UI_Input_KeyboardAndMouse: SendInput (text injection).
# Win32_System_Threading + Win32_System_LibraryLoader: identify the focus target's process, and
# install the diagnostic keyboard hook (ADR-PROJ-004).
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    # Clipboard read for the {clipboard} macro placeholder (ADR-PROJ-010).
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }

[dev-dependencies]
tempfile = "3.27.0"
